--- a/codeforces/.vscode/settings.json
+++ b/codeforces/.vscode/settings.json
@@ -2,7 +2,6 @@
     "files.associations": {
         "*.cpp": "cpp",
         "*.java": "java",
-        "iostream": "cpp",
-        "*.tcc": "cpp"
+        "iostream": "cpp"
     }
 }
